tests/e2e/secondary-networks/02-server.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  name: test-server
  labels:
    app: test-svc
  annotations:
    networking.gke.io/interfaces: '[{"interfaceName":"eth1","network":"test-vlan-123"}]'
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
