tests/e2e/secondary-networks/05-client-job.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: batch/v1
kind: Job
metadata:
  name: test-client
spec:
  template:
    metadata:
      annotations:
        networking.gke.io/interfaces: '[{"interfaceName":"eth1","network":"test-vlan-123"}]'
    spec:
      containers:
        - name: curl
          image: curlimages/curl
          command: ["/bin/sh", "-c"]
          args:
            - |
              set -e
              echo "Testing Multi-Network Gateway API DNS ($TARGET_URL)..."
              until curl -s -f --connect-timeout 3 "$TARGET_URL"; do
                echo "Waiting for Gateway API endpoint..."
                sleep 2
              done
              echo "Gateway API DNS & HTTP reachability successful!"
          env:
            - name: TARGET_URL
              value: "http://example-cluster-ip-gateway.($namespace).gkegw.cluster.local"
      restartPolicy: Never
  backoffLimit: 4
